<resources>
    <string-array name="dog_sizes_array">
        <item>@string/tiny</item>
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/large</item>
        <item>@string/huge</item>
    </string-array>
    <string-array name="dog_sizes_array_values_pref">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="exp_years_array">
        <item>0-1</item>
        <item>1-3</item>
        <item>3-5</item>
        <item>5+</item>
    </string-array>
    <string-array name="exp_years_array_preference_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="km_range">
        <item>@string/km1_range</item>
        <item>@string/km3_range</item>
        <item>@string/km15_range</item>
        <item>@string/km30_range</item>
        <item>@string/km50_range</item>
    </string-array>
    <string-array name="km_range_preference_values">
        <item>1</item>
        <item>3</item>
        <item>15</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="last_call_array">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string-array name="gender_key">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="genders_pref_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="app_name">Doglink</string>
    <string name="welcome_to_dog_app">Welcome to Dog App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="join_our_family">Join our family!</string>
    <string name="select_profile_pic">press to select profile image</string>
    <string name="not_required">*not required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="km1_range">1km</string>
    <string name="km3_range">3km</string>
    <string name="km5_range">5km</string>
    <string name="km15_range">15km</string>
    <string name="km30_range">30km</string>
    <string name="km50_range">50km+</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="dog_owner">Dog Owner</string>
    <string name="dog_walker">Dog Walker</string>
    <string name="about_you">About you</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="field_empty_error">Field cannot be empty</string>
    <string name="your_location">Your location</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="pass_no_match_error">Password doesn\'t match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_gender">Select a gender</string>
    <string name="select_type">Select a type</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="register_fail">Registration failed</string>
    <string name="send_me_an_email">Send me an email</string>
    <string name="hint_forgot_pass">Forgot your password?\nEnter your email address to get a password reset</string>
    <string name="password_reset_sent_to">Password reset sent to</string>
    <string name="success">Success!</string>
    <string name="close">Close</string>
    <string name="failed">Failed!</string>
    <string name="invalid_email">Email address not found</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="try_again">Please try again</string>
    <string name="at_least_six">At least 6 characters</string>
    <string name="reg_complete">Registration completed!</string>
    <string name="confirm">Confirm</string>
    <string name="login_hidden_text">Find dog walkers, adopt, post and more</string>
    <string name="enter_loc_manual">Enter location manually</string>
    <string name="adopt_board">Adopt</string>
    <string name="dog_walkers">Dog Walkers</string>
    <string name="loggin_in">Logging in</string>
    <string name="create_new_acc">Creating new account</string>
    <string name="fetch_location">Fetching your location</string>
    <string name="login_failed">Login failed</string>
    <string name="email_sent">Email sent!</string>
    <string name="welcome">Welcome</string>
    <string name="reg_failed">Registration failed</string>
    <string name="check_correct_details">Please check that the details are correct</string>
    <string name="my_profile">My Profile</string>
    <string name="display_profile_picture">Display profile picture</string>
    <string name="choose_a_new_picture">Choose a new profile picture</string>
    <string name="take_a_new_picture">Take a new profile picture</string>
    <string name="failed_upload_image">Failed to upload the image</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="place_holder">Place Holder</string>
    <string name="_11_hr">11 hrs</string>
    <string name="status_place_holder">This is status</string>
    <string name="_5_comments">5 comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="no_msgs">No messages</string>
    <string name="sending_email">We\'re sending you an email</string>
    <string name="delete_post">Delete post</string>
    <string name="upload_post">Uploading your post</string>
    <string name="post_published">Post published</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="commit">Comment</string>
    <string name="post">Post</string>
    <string name="publish_new_post">Publish new post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="choose_action">Choose action</string>
    <string name="discover_friends">Discover new people</string>
    <string name="unfollow_from">Unfollowed from</string>
    <string name="you_now_follow">You now follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="new_msg_from">New message from</string>
    <string name="register_as_client">Register as Dog Owner</string>
    <string name="register_as_dog_walker">Register as Dog Walker</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="tiny">Tiny</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="huge">Huge</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_dog_size">Choose dog sizes you are willing to accept</string>
    <string name="choose_km_range">Choose km range</string>
    <string name="allow_last_call">Are you allowing last minute call?</string>
    <string name="must_take_charge">You must take charge</string>
    <string name="no_permissions">No permissions</string>
    <string name="permissions_granted">Permission granted</string>
    <string name="good_with_dogs_at_sizes">Good with dogs at sizes</string>
    <string name="is_willing_in_range_of">Is willing to travel to owner\'s house in the range of</string>
    <string name="allows_last_minute_call">Allows last minute call?</string>
    <string name="service_cost_per_trip">Service cost for each trip (hour)</string>
    <string name="ils">₪</string>
    <string name="about_me">About me</string>
    <string name="no_following_yet">No following yet</string>
    <string name="no_chats_yet">No chats yet</string>
    <string name="no_followers_yet">No followers yet</string>
    <string name="was_removed_from_followers">was removed from your followers</string>
    <string name="check_location_permissions">Check your location permissions</string>
    <string name="km">km</string>
    <string name="years_of_exp">years of experience</string>
    <string name="per_walk">/ per walk (an hour)</string>
    <string name="reviews">Reviews</string>
    <string name="dog_walking_exp_title">Years of experience dog walking</string>
    <string name="choose_registration_type">Choose registration type</string>
    <string name="pls_leave_review_and_rating">Please leave a review and a rating</string>
    <string name="review_rating">Reviewers rating</string>
    <string name="total_rating_reviews">Total rating this dog walker got from reviewers</string>
    <string name="all_reviews_about">All the reviews about</string>
    <string name="no_curr_reviews">No current reviews</string>
    <string name="got_it">Got it</string>
    <string name="profile_pho_change">Profile photo changed</string>
    <string name="profile_photo_update_fail">Profile photo update failed</string>
    <string name="display_cover_image">Display cover image</string>
    <string name="take_a_new_cover_picture">Take a new cover picture</string>
    <string name="choose_a_new_cover_picture">Choose a new cover picture</string>
    <string name="no_cover_to_show">No cover picture to display</string>
    <string name="failed_update_cover">Failed to update cover photo</string>
    <string name="change_your_disp_name">Change your display name</string>
    <string name="edit_your_about_me">Edit your About Me</string>
    <string name="display_name">Display name</string>
    <string name="account_settings">Account settings</string>
    <string name="personal_info">Personal information</string>
    <string name="here_can_change_name">Here you can change your display name</string>
    <string name="identify_different">Identify differently</string>
    <string name="let_people_know_more">Let people know more about you</string>
    <string name="we_send_you_email_with_pass_reset">We\'ll send you an email with a password reset</string>
    <string name="pass_reset">Password reset</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="how_long_travel">How long are you willing to travel to get to the owner\'s house?</string>
    <string name="dog_sizes_your_e_ok_with">Dog sizes your\'e ok with</string>
    <string name="choose_dog_sizes_you_ok_with">Choose the sizes of dogs you are ok with</string>
    <string name="are_you_ok_with_last_minute_call">Last minute call?</string>
    <string name="payment_per_walk_hour">Payment per walk</string>
    <string name="pay_per_walk_usual_hour">Payment per walk are usually for an hour</string>
    <string name="allow_last_min_call">Are you allowing last minute call?</string>
    <string name="how_many_years_dog_walking">How many years do you have as a dog walker?</string>
    <string name="here_can_change_location">Here you can change your location</string>
    <string name="my_location">My location</string>
    <string name="cancel">Cancel</string>
    <string name="properties">Properties</string>
    <string name="km_travel_range">Km travel range</string>
    <string name="enter_pay_p_walk_ils">Enter payment per walk in ILS</string>
</resources>