<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_shape">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fail_dialog_icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/top_alert_dialog_fail_shape"
        android:paddingVertical="5dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/fail" />

    <TextView
        android:id="@+id/failed_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fail_dialog_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/went_wrong"

        android:textSize="35sp" />

    <TextView
        android:id="@+id/fail_body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/failed_title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center"
        android:text="@string/invalid_email"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fail_dialog_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fail_body_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:paddingVertical="10dp"
        android:text="@string/close"
        android:textAllCaps="false"
        app:backgroundTint="@color/red"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_close_black_24dp" />
</RelativeLayout>