<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_shape">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/confirm_dialog_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/top_alert_dialog_success_shape"
        android:paddingVertical="20dp"
        app:lottie_autoPlay="true"
        app:lottie_speed="2"
        app:lottie_rawRes="@raw/confirmation" />

    <TextView
        android:id="@+id/success_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_dialog_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/success"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/success_body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/password_reset_sent_to"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/success_dialog_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success_body_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:paddingVertical="10dp"
        android:text="@string/close"
        android:textAllCaps="false"
        app:cornerRadius="40dp"
        app:backgroundTint="@color/green"
        app:icon="@drawable/ic_close_black_24dp" />
</RelativeLayout>