<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bg__dialog_shape"
    android:paddingHorizontal="5dp"
    android:paddingVertical="13dp">

    <ImageView
        android:id="@+id/profile_dialog_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/location_64_icon" />

    <TextView
        android:id="@+id/profile_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_dialog_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/here_can_change_location"
        android:textSize="17sp" />

    <AutoCompleteTextView
        android:id="@+id/profile_dialog_location_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@id/profile_dialog_title"
        android:layout_marginHorizontal="20dp"
        android:completionThreshold="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_dialog_location_et"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_dialog_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/confirm"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            app:backgroundTint="@color/green"
            app:cornerRadius="40dp"
            app:icon="@drawable/ic_check_black_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_dialog_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            app:backgroundTint="@color/red"
            app:cornerRadius="40dp"
            app:icon="@drawable/ic_close_black_24dp" />

    </RelativeLayout>

</RelativeLayout>